--- a/wp-content/languages/plugins/akismet-nb_NO.po
+++ b/wp-content/languages/plugins/akismet-nb_NO.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Development package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2014-12-01 10:16:44+0000\n"
+"PO-Revision-Date: 2015-02-18 11:28:22+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -11,10 +11,18 @@ msgstr ""
 "Project-Id-Version: Development\n"
 
 #: views/config.php:97
-msgid "Spam in the <a href=\"%s\">spam folder</a> older than 1 day is deleted automatically."
+msgid "Spam in the <a href=\"%1$s\">spam folder</a> older than 1 day is deleted automatically."
 msgid_plural "Spam in the <a href=\"%1$s\">spam folder</a> older than %2$d days is deleted automatically."
-msgstr[0] "Useriøst innhold i <a href=\"%s\">Useriøs-mappen</a> som er eldre enn 1 dag blir slettet automatisk."
-msgstr[1] "Useriøst innhold i <a href=\"%1$s\">Useriøs-mappen</a> som er eldre enn %2$d dager blir slettet automatisk."
+msgstr[0] "Useriøse innlegg i <a href=\"%1$s\">Useriøs-mappen</a> som er eldre enn 1 dag, slettes automatisk."
+msgstr[1] "Useriøse innlegg i <a href=\"%1$s\">Useriøs-mappen</a> som er eldre enn %2$d dager, slettes automatisk."
+
+#. Description of the plugin/theme
+msgid "Used by millions, Akismet is quite possibly the best way in the world to <strong>protect your blog from comment and trackback spam</strong>. It keeps your site protected from spam even while you sleep. To get started: 1) Click the \"Activate\" link to the left of this description, 2) <a href=\"http://akismet.com/get/\">Sign up for an Akismet API key</a>, and 3) Go to your Akismet configuration page, and save your API key."
+msgstr "Benyttet av millioner, er Akismet muligens den beste måten i verden å <strong>beskytte din blogg fra useriøse innlegg og tilbaketråkk</strong>. Den holder nettstedet ditt beskyttet, selv når du sover. For å komme i gang: 1) Klikk «Aktiver»-lenken til venstre for denne beskrivelsen. 2) <a href=\"http://akismet.com/get/\">Registrer deg, for å motta en Akismet API-nøkkel</a>. 3) Gå til din Akismet konfigurasjonsside og lagre API-nøkkelen."
+
+#. Plugin URI of the plugin/theme
+msgid "http://akismet.com/"
+msgstr "http://akismet.com/"
 
 #: class.akismet-admin.php:700
 msgid "Please check your <a href=\"%s\">Akismet configuration</a> and contact your web host if problems persist."
@@ -108,10 +116,6 @@ msgstr "Ditt abonnement mangler."
 msgid "You're using Akismet on far too many sites for your Pro subscription."
 msgstr "Du bruker Akismet på altfor mange nettsteder for ditt Pro-abonnement."
 
-#: views/notice.php:96
-msgid "If you would like to use Akismet on more than 10 sites, you will need to <a href=\"%s\" target=\"_blank\">upgrade to an Enterprise subscription</a>. If you have any questions, please <a href=\"%s\" target=\"_blank\">get in touch with our support team</a>"
-msgstr "Hvis du ønsker å bruke Akismet på flere enn 10 nettsteder trenger du å <a href=\"%s\" target=\"_blank\">oppgradere til et Enterprise-abonnement</a>. Har du spørsmål, vennligst <a href=\"%s\" target=\"_blank\">ta kontakt med vårt brukerstøtte-team</a>"
-
 #: views/notice.php:95
 msgid "You're using your Akismet key on more sites than your Pro subscription allows."
 msgstr "Du bruker din Akismet-nøkkel på flere nettsteder enn ditt Pro-abonnement tillater."
@@ -143,6 +147,14 @@ msgstr "Nettverksfunksjoner er deaktivert."
 #: views/notice.php:20
 msgid "Akismet has detected a problem."
 msgstr "Akismet har oppdaget et problem."
+
+#. Author of the plugin/theme
+msgid "Automattic"
+msgstr "Automattic"
+
+#. Author URI of the plugin/theme
+msgid "http://automattic.com/wordpress-plugins/"
+msgstr "http://automattic.com/wordpress-plugins/"
 
 #: views/notice.php:57
 msgid "Your subscription is cancelled."
@@ -374,6 +386,8 @@ msgstr "Akismet var ikke i stand til å sjekke denne kommentaren (respons: %s), 
 msgid "View comment history"
 msgstr "Se kommentarhistorikk"
 
+#. #-#-#-#-#  akismet.pot (Akismet 3.0.5b1)  #-#-#-#-#
+#. Plugin Name of the plugin/theme
 #: class.akismet-admin.php:76 class.akismet-admin.php:78
 #: class.akismet-admin.php:757 views/config.php:3
 msgid "Akismet"
