--- a/wp-content/languages/themes/twentyfifteen-nb_NO.po
+++ b/wp-content/languages/themes/twentyfifteen-nb_NO.po
@@ -2,13 +2,18 @@
 # This file is distributed under the same license as the Twenty Fifteen package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2015-03-27 07:43:33+0000\n"
+"PO-Revision-Date: 2015-07-07 10:34:42+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: GlotPress/1.0-alpha-1000\n"
 "Project-Id-Version: Twenty Fifteen\n"
+
+#. translators: %s: post title
+#: inc/template-tags.php:123
+msgid "Leave a comment<span class=\"screen-reader-text\"> on %s</span>"
+msgstr "Legg igjen en kommentar<span class=\"screen-reader-text\"> til %s</span>"
 
 #. Theme URI of the plugin/theme
 msgid "https://wordpress.org/themes/twentyfifteen/"
@@ -55,18 +60,6 @@ msgstr "Neste bilde"
 #: inc/template-tags.php:23
 msgid "Comment navigation"
 msgstr "Kommentarnavigasjon"
-
-#: inc/template-tags.php:122
-msgid "Leave a comment"
-msgstr "Legg igjen en kommentar"
-
-#: inc/template-tags.php:122
-msgid "1 Comment"
-msgstr "1 kommentar"
-
-#: inc/template-tags.php:122
-msgid "% Comments"
-msgstr "% kommentarer"
 
 #: search.php:18
 msgid "Search Results for: %s"
@@ -222,7 +215,7 @@ msgid "https://wordpress.org/"
 msgstr "https://wordpress.org/"
 
 #. translators: %s: Name of current post
-#: content-link.php:31 content.php:33 inc/template-tags.php:237
+#: content-link.php:31 content.php:33 inc/template-tags.php:238
 msgid "Continue reading %s"
 msgstr "Fortsett å lese %s"
 
